# cipherscan

./: .dockerignore  .env.docker.example  .env.example  .gitattributes  .gitignore  .hadolint.yaml  .trufflehogignore  AGENTS.md  CROSSLINK-EXPLORER-DEPLOYMENT.md  DEBUG_COMPACT_WASM.md  DEBUG_SHARED_SECRET.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  TEST_COMPACT_DATA.md  TEST_COMPACT_WASM_BROWSER.md  ZNS_INTEGRATION.md  docker-compose.mining.yml  docker-compose.yml  index-with-io.js  linkability.js  middleware.ts  near-intents.js  next.config.ts  package-lock.json  package.json  server.js  tailwind.config.ts  test-compact-decryption.js  test-lightwalletd-api.sh  tsconfig.json
.github/: dependabot.yml
MAINNET_SETUP/: CHECK_TESTNET.sh  DEPLOY_MAINNET.sh  DIRECTORY_STRUCTURE.md  FIX_LIGHTWALLETD_TESTNET.sh  GET_DONATION_ADDRESS.md  README.md  SCHEMA_COMPARISON.md  VERIFICATION_CHECKLIST.md  env.mainnet.example  indexer-mainnet.js  nginx-api-mainnet.conf  package.json  server-mainnet.js  setup-lightwalletd.sh  zcash-api-mainnet.service  zcash-indexer-mainnet.service  zebrad-mainnet.service  zebrad-mainnet.toml
app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
components/: AddressLabel.tsx  AddressWithLabel.tsx  BatchPatternCard.tsx  BlockActivityChart.tsx  ChainSyncBanner.tsx  ChartWatermark.tsx  CopyButton.tsx  CrosslinkChainGraph.tsx  CrosslinkChainView.tsx  CrosslinkLearn.tsx  CrosslinkStats.tsx  DecryptPageClient.tsx  DonateButton.tsx  ExportButton.tsx  Footer.tsx  (+31 more)
rust-indexer/: Cargo.toml
rust-indexer/src/: main.rs
(+420 files in other folders)
