[package]
name = "cipherscan-indexer"
version = "0.1.0"
edition = "2021"
description = "Fast Rust indexer for CipherScan - reads directly from Zebra's RocksDB"
authors = ["CipherScan"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
rocksdb = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Zcash parsing (from Zebra)
# zebra-chain = "1"  # Uncomment when ready for full parsing

# Utils
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
